<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/forgot"
    android:clipToOutline="true"
    android:background="@drawable/sign_in"
    tools:context=".ForgotPasswordFragment">

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_75sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/archivo_black"
        android:gravity="top"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/forget_pass"
        android:textAppearance="@style/forget_pass"
        android:textSize="@dimen/_25sdp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/validId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="Enter your email address"
            android:textColorHint="@color/granite_grey"
            android:paddingStart="@dimen/_7sdp"
            android:drawableStart="@drawable/person"
            android:drawablePadding="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/forgot_pass"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/we_will_sen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="top"
        android:layout_marginBottom="@dimen/_25sdp"
        android:text="@string/we_will_send_you_a_message_to_set_or_rest_your_n_new_password"
        android:textAppearance="@style/we_will_sen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/adamina"
            android:gravity="right"
            android:lineHeight="@dimen/_43sdp"
            android:text="@string/send_code"
            android:textAppearance="@style/sign_in"
            android:textSize="@dimen/_20sdp" />

        <View
            android:id="@+id/ellipse_1"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn"
            android:padding="@dimen/_20sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_243sdp"
        android:layout_marginBottom="@dimen/_0sdp"
        android:fontFamily="@font/abeezee"
        android:text="@string/back"
        android:textAppearance="@style/back"
        android:textSize="@dimen/_12sdp" />
</LinearLayout>