<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:id="@+id/signIn"
    android:orientation="vertical"
    android:background="@drawable/sign_in"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_75sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/archivo_black"
        android:gravity="top"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/welcome_back"
        android:textAppearance="@style/welcome_bac"
        android:textSize="@dimen/_25sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="Email"
            android:textColorHint="@color/granite_grey"
            android:drawableStart="@drawable/person"
            android:paddingStart="@dimen/_7sdp"
            android:padding="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:background="@drawable/forgot_pass"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="Password"
            android:paddingEnd="@dimen/_10sdp"
            android:textColorHint="@color/granite_grey"
            android:drawableStart="@drawable/lock"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:background="@drawable/forgot_pass"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:lineHeight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:gravity="right"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/adamina"
            android:gravity="right"
            android:lineHeight="@dimen/_43sdp"
            android:text="@string/register"
            android:textAppearance="@style/sign_in"
            android:textSize="@dimen/_20sdp" />

        <View
            android:id="@+id/ellipse_1"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/_160sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn"
            android:padding="@dimen/_20sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_in_wit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:lineHeight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:text="@string/sign_in_wit"
        android:textAppearance="@style/sign_in_wit"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10sdp"
        >


        <View
            android:id="@+id/google"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/google"
            />


        <View
            android:id="@+id/apple"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/apple_id"
            />

        <View
            android:id="@+id/facebook"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/facebook"
            />

    </LinearLayout>
</LinearLayout>