<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/signUp"
    android:background="@drawable/sign_in"
    tools:context=".SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/archivo_black"
        android:gravity="top"
        android:layout_marginBottom="@dimen/_10sdp"
        android:lineHeight="@dimen/_35sdp"
        android:text="@string/create_an_a"
        android:textAppearance="@style/create_an_a"
        android:textSize="@dimen/_25sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="Username"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/granite_grey"
            android:drawableStart="@drawable/person"
            android:paddingStart="@dimen/_7sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:background="@drawable/forgot_pass"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="Email"
        android:textColorHint="@color/granite_grey"
        android:drawableStart="@drawable/person"
        android:paddingStart="@dimen/_7sdp"
        android:padding="@dimen/_5sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:background="@drawable/forgot_pass"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="Password"
        android:paddingEnd="@dimen/_10sdp"
        android:textColorHint="@color/granite_grey"
        android:drawableStart="@drawable/lock"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/forgot_pass"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="Confirm Password"
        android:paddingEnd="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/granite_grey"
        android:drawableStart="@drawable/lock"
        android:paddingStart="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/forgot_pass"
        />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/by_clicking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"
        android:text="@string/by_clicking"
        android:textAppearance="@style/by_clicking"
        android:gravity="top"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        >

        <TextView
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/adamina"
            android:gravity="right"
            android:lineHeight="@dimen/_43sdp"
            android:text="@string/sign_in"
            android:textAppearance="@style/sign_in"
            android:textSize="@dimen/_20sdp" />

        <View
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_in_wit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:lineHeight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/sign_up_with"
        android:textAppearance="@style/sign_in_wit"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        >


        <View
            android:id="@+id/google"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/google"
            />


        <View
            android:id="@+id/apple"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/apple_id"
            />

        <View
            android:id="@+id/facebook"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/facebook"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_0sdp"
        android:fontFamily="@font/abeezee"
        android:text="@string/back"
        android:textAppearance="@style/back"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>